# NiFiPulse

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  NOTICE  Readme.md  SQL_Script.sql  data-Normalisation.py  docker-compose.yml  extract_in_json.py  extract_metrics.py  load_postgres.py  load_star_schema.py  prometheus.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: cd.yml  ci.yml  tests.yml
Alerting/: Alerting.md  AlertingEngine_Flow.json
db/init/: SQL_Script.sql
grafana/dashboards/: dashboard.yml  nifi_health_performance.json  nifi_health_performance_view.json
grafana/provisioning/datasources/: datasource.yml
logs_sim_scripts/: Nifi_log_debit.py  RAMsimulation.py  ram_as_nifi_metric .py
logs_sim_scripts/Ram-WorkflowSimulationScript/: api_simulator_.py  collector_data.py
logs_sim_scripts/RamSimulationScript/: api_simulator.py  collector.py
nifi_flows/: NiFi_Flow_debit (1).json  NiFi_Flow_debit.json  RamFlow.json  nifi_cpu_flow.json  nifi_file_flow.json  nifi_pipline_status_flow.json
nifipulse/: __init__.py  cli.py  config.py  data_normalisation.py  extract_metrics.py  load_postgres.py  metrics_list.txt  utils.py
simulation/: cpu_simulation.md  file_simulation.md  nifi_prom_conf.md  pipeline_simulation.md
state_of_art/: state_of_art.md
tests/: test_data_normalisation.py  test_extract_metrics.py  test_load_postgre.py  test_utils.py
